--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>Register Printer</h1>
 <mat-grid-list cols="4">
   <mat-grid-tile colspan="1" rowspan="1">
+    <mat-grid-tile-header>Tree View</mat-grid-tile-header>
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
       <!-- This is the tree node template for leaf nodes -->
       <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
@@ -21,7 +22,10 @@
     </mat-tree>    
   </mat-grid-tile>
   <mat-grid-tile colspan="3" rowspan="1">
-    Content View
+    <mat-grid-tile-header>Content View</mat-grid-tile-header>
+  </mat-grid-tile>
+  <mat-grid-tile colspan="4">
+    <mat-grid-tile-header>Console View</mat-grid-tile-header>
   </mat-grid-tile>
 </mat-grid-list>
 <router-outlet></router-outlet>
