--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>Register Printer</h1>
 <mat-grid-list cols="4">
   <mat-grid-tile colspan="1" rowspan="1">
-    <mat-grid-tile-header>Tree View</mat-grid-tile-header>
-    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" [ngStyle]="{'width': '100%', 'height': '100%', 'overflow': 'scroll'}">
       <!-- This is the tree node template for leaf nodes -->
       <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
         <!-- use a disabled button to provide padding for tree leaf -->
@@ -19,7 +18,7 @@
         </button>
         {{node.name}}
       </mat-tree-node>
-    </mat-tree>    
+    </mat-tree>
   </mat-grid-tile>
   <mat-grid-tile colspan="3" rowspan="1">
     <mat-grid-tile-header>Content View</mat-grid-tile-header>
