--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>Register Printer</h1>
-<mat-grid-list cols="4">
-  <mat-grid-tile colspan="1" rowspan="1">
-    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" [ngStyle]="{'width': '100%', 'height': '100%', 'overflow': 'scroll'}">
+<div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 75%', 'grid-template-rows': 'auto'}">
+  <div>
+    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
       <!-- This is the tree node template for leaf nodes -->
       <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
         <!-- use a disabled button to provide padding for tree leaf -->
@@ -10,8 +10,7 @@
       </mat-tree-node>
       <!-- This is the tree node template for expandable nodes -->
       <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-        <button mat-icon-button matTreeNodeToggle
-                [attr.aria-label]="'toggle ' + node.name">
+        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
@@ -19,12 +18,8 @@
         {{node.name}}
       </mat-tree-node>
     </mat-tree>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="3" rowspan="1">
-    <mat-grid-tile-header>Content View</mat-grid-tile-header>
-  </mat-grid-tile>
-  <mat-grid-tile colspan="4">
-    <mat-grid-tile-header>Console View</mat-grid-tile-header>
-  </mat-grid-tile>
-</mat-grid-list>
+  </div>
+  <div [ngStyle]="{'background': 'green'}">Content View</div>
+  <div [ngStyle]="{'background': 'red', 'grid-area': '2 / 1 / 3 / 3'}">Console View</div>
+</div>
 <router-outlet></router-outlet>
