--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,7 @@
 <h1>Register Printer</h1>
 <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 75%', 'grid-template-rows': 'auto'}">
-  <div>
-    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-      <!-- This is the tree node template for leaf nodes -->
-      <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-        <!-- use a disabled button to provide padding for tree leaf -->
-        <button mat-icon-button disabled></button>
-        {{node.name}}
-      </mat-tree-node>
-      <!-- This is the tree node template for expandable nodes -->
-      <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-        <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
-          <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-          </mat-icon>
-        </button>
-        {{node.name}}
-      </mat-tree-node>
-    </mat-tree>
-  </div>
-  <div [ngStyle]="{'background': 'green'}">Content View</div>
-  <div [ngStyle]="{'background': 'red', 'grid-area': '2 / 1 / 3 / 3'}">Console View</div>
+  <app-top-sys-tree-view></app-top-sys-tree-view>
+  <app-top-sys-content-view></app-top-sys-content-view>
+  <app-top-sys-console-view [ngStyle]="{'grid-area': '2 / 1 / 3 / 3'}"></app-top-sys-console-view>
 </div>
 <router-outlet></router-outlet>
