--- a/src/app/top-sys-tree-view/top-sys-tree-view.component.html
+++ b/src/app/top-sys-tree-view/top-sys-tree-view.component.html
@@ -1,20 +1,23 @@
 <div>
     <h2>Tree View</h2>
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-        <!-- This is the tree node template for leaf nodes -->
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-            <!-- use a disabled button to provide padding for tree leaf -->
-            <button mat-icon-button disabled></button>
-            {{node.name}}
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle class="example-tree-node">
+            <div>
+                <button mat-icon-button disabled></button>
+                {{node.name}}
+            </div>
         </mat-tree-node>
         <!-- This is the tree node template for expandable nodes -->
-        <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+        <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" class="example-tree-node">
             <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
                 <mat-icon class="mat-icon-rtl-mirror">
                     {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                 </mat-icon>
             </button>
             {{node.name}}
-        </mat-tree-node>
+            <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+                <ng-container matTreeNodeOutlet></ng-container>
+            </div>
+        </mat-nested-tree-node>
     </mat-tree>
 </div>
