--- a/src/app/top-sys-tree-view/top-sys-tree-view.component.html
+++ b/src/app/top-sys-tree-view/top-sys-tree-view.component.html
@@ -3,8 +3,7 @@
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle class="example-tree-node">
             <div>
-                <button mat-icon-button disabled></button>
-                {{node.name}}
+                <app-register-printer-node [registerPrinterTreeNode]="node"></app-register-printer-node>
             </div>
         </mat-tree-node>
         <!-- This is the tree node template for expandable nodes -->
@@ -14,7 +13,7 @@
                     {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
                 </mat-icon>
             </button>
-            {{node.name}}
+            <app-register-printer-node [registerPrinterTreeNode]="node"></app-register-printer-node>
             <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
                 <ng-container matTreeNodeOutlet></ng-container>
             </div>
