--- a/src/app/register-printer-node/register-printer-node.component.html
+++ b/src/app/register-printer-node/register-printer-node.component.html
@@ -1,4 +1,5 @@
 <span>
     <app-top-sys-node [topSysTreeNode]="registerPrinterTreeNode" *ngIf="registerPrinterTreeNode.type === 'TopSysNode'"></app-top-sys-node>
     <app-property-node [propertyTreeNode]="registerPrinterTreeNode" *ngIf="registerPrinterTreeNode.type === 'PropertyNode'"></app-property-node>
+    <app-block-types-node *ngIf="isBlockTypesTreeNode()"></app-block-types-node>
 </span>
