Add Register node class.

--- a/src/app/register-printer-node/register-printer-node.component.html
+++ b/src/app/register-printer-node/register-printer-node.component.html
@@ -3,4 +3,5 @@
     <app-property-node [propertyTreeNode]="registerPrinterTreeNode" *ngIf="registerPrinterTreeNode.type === 'PropertyNode'"></app-property-node>
     <app-block-types-node *ngIf="isBlockTypesTreeNode()"></app-block-types-node>
     <app-block-type-node [blockTypeTreeNode]="registerPrinterTreeNode" *ngIf="isBlockTypeTreeNode()"></app-block-type-node>
+    <app-registers-node *ngIf="isRegistersTreeNode()"></app-registers-node>
 </span>
