--- a/src/app/register-printer-node/register-printer-node.component.html
+++ b/src/app/register-printer-node/register-printer-node.component.html
@@ -1,7 +1,30 @@
 <span>
-    <app-top-sys-node [topSysTreeNode]="registerPrinterTreeNode" *ngIf="registerPrinterTreeNode.type === 'TopSysNode'"></app-top-sys-node>
-    <app-property-node [propertyTreeNode]="registerPrinterTreeNode" *ngIf="registerPrinterTreeNode.type === 'PropertyNode'"></app-property-node>
-    <app-block-types-node *ngIf="isBlockTypesTreeNode()"></app-block-types-node>
-    <app-block-type-node [blockTypeTreeNode]="registerPrinterTreeNode" *ngIf="isBlockTypeTreeNode()"></app-block-type-node>
-    <app-registers-node *ngIf="isRegistersTreeNode()"></app-registers-node>
+  <app-top-sys-node
+    [topSysTreeNode]="registerPrinterTreeNode"
+    *ngIf="registerPrinterTreeNode.type === 'TopSysNode'">
+  </app-top-sys-node>
+  <app-property-node
+    [propertyTreeNode]="registerPrinterTreeNode"
+    *ngIf="registerPrinterTreeNode.type === 'PropertyNode'">
+  </app-property-node>
+  <app-block-types-node *ngIf="isBlockTypesTreeNode()">
+  </app-block-types-node>
+  <app-block-type-node
+    [blockTypeTreeNode]="registerPrinterTreeNode"
+    *ngIf="isBlockTypeTreeNode()">
+  </app-block-type-node>
+  <app-registers-node
+    *ngIf="isRegistersTreeNode()">
+  </app-registers-node>
+  <app-register-node
+    [registerTreeNode]="registerPrinterTreeNode"
+    *ngIf="isRegisterTreeNode()">
+  </app-register-node>
+  <app-fields-node
+    *ngIf="isFieldsTreeNode()">
+  </app-fields-node>
+  <app-field-node
+    [fieldTreeNode]="registerPrinterTreeNode"
+    *ngIf="isFieldTreeNode()">
+  </app-field-node>
 </span>
