--- a/src/app/register-view/register-view.component.html
+++ b/src/app/register-view/register-view.component.html
@@ -1,7 +1,26 @@
 <div>
-  <h2>Register</h2>
-  <ul>
-    <li>{{ register.name }}</li>
-    <li>{{ register.offset }}</li>
-  </ul>
+  <h2>Register: {{ register.name }}</h2>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>name</th>
+        <th>value</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Offset: </td>
+        <td>{{ register.offset }}</td>
+      </tr>
+      <tr>
+        <td>Fields: </td>
+        <td>
+          <app-field-view
+            *ngFor="let field of register.fields"
+            [field]="field">
+          </app-field-view>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
