--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,21 @@
 <h1>Register Printer</h1>
 <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 75%', 'grid-template-rows': 'auto'}">
+  <button
+    (click)="onOpenClicked()"
+    [ngStyle]="{'grid-area': '1 / 1 / 1 / 1'}">
+    Open...
+  </button>
   <app-top-sys-tree-view
     [topSys]="topSys"
-    (selected)="onSelect($event)">
+    (selected)="onSelect($event)"
+    [ngStyle]="{'grid-area': '2 / 1 / 2 / 1'}">
   </app-top-sys-tree-view>
-  <app-top-sys-content-view [registerPrinterObject]="selected">
+  <app-top-sys-content-view
+    [registerPrinterObject]="selected"
+    [ngStyle]="{'grid-area': '2 / 2 / 2 / 2'}">
   </app-top-sys-content-view>
   <app-top-sys-console-view
-    [ngStyle]="{'grid-area': '2 / 1 / 3 / 3'}">
+    [ngStyle]="{'grid-area': '3 / 1 / 3 / 3'}">
   </app-top-sys-console-view>
 </div>
 <router-outlet></router-outlet>
