--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>Register Printer</h1>
 <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 75%', 'grid-template-rows': 'auto'}">
   <button
+    mat-raised-button
     (click)="onOpenClicked()"
     [ngStyle]="{'grid-area': '1 / 1 / 1 / 1'}">
     Open...
