Add title and action buttons.

--- a/src/app/open-dialog/open-dialog.component.html
+++ b/src/app/open-dialog/open-dialog.component.html
@@ -1,1 +1,8 @@
 <h1 mat-dialog-title>Open Dialog works!</h1>
+<mat-dialog-content>
+  Files
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button [mat-dialog-close]="true">Open</button>
+</mat-dialog-actions>
