Add AddressMap view.

--- a/src/app/top-sys-content-view/top-sys-content-view.component.html
+++ b/src/app/top-sys-content-view/top-sys-content-view.component.html
@@ -8,6 +8,10 @@
       *ngIf="isBlock()"
       [block]="registerPrinterObject">
     </app-block-view>
+    <app-address-map-view
+      *ngIf="isAddressMap()"
+      [addressMap]="registerPrinterObject">
+    </app-address-map-view>
     <app-block-type-view
       *ngIf="isBlockType()"
       [blockType]="registerPrinterObject">
