--- a/src/app/register-printer-node/register-printer-node.component.html
+++ b/src/app/register-printer-node/register-printer-node.component.html
@@ -7,6 +7,12 @@
     [propertyTreeNode]="registerPrinterTreeNode"
     *ngIf="registerPrinterTreeNode.type === 'PropertyNode'">
   </app-property-node>
+  <app-address-maps-node *ngIf="isAddressMapsTreeNode()">
+  </app-address-maps-node>
+  <app-address-map-node
+    [addressMapTreeNode]="registerPrinterTreeNode"
+    *ngIf="isAddressMapTreeNode()">
+  </app-address-map-node>
   <app-block-types-node *ngIf="isBlockTypesTreeNode()">
   </app-block-types-node>
   <app-block-type-node
