--- a/src/app/address-map-node/address-map-node.component.html
+++ b/src/app/address-map-node/address-map-node.component.html
@@ -1,1 +1,1 @@
-<span>Address Map: {{ addressMapTreeNode.addressMap.blockInstance }}</span>
+<span>{{ addressMapTreeNode.addressMap.blockInstance }}</span>
