Change the output sequence of topsys view.

--- a/src/app/top-sys-view/top-sys-view.component.html
+++ b/src/app/top-sys-view/top-sys-view.component.html
@@ -9,12 +9,8 @@
     </thead>
     <tbody>
       <tr>
-        <td>Address Width:</td>
-        <td>{{ topSys.addressWidth }}</td>
-      </tr>
-      <tr>
-        <td>Data Width:</td>
-        <td>{{ topSys.dataWidth }}</td>
+        <td>Name: </td>
+        <td>{{ topSys.name }}</td>
       </tr>
       <tr>
         <td>Version:</td>
@@ -23,6 +19,14 @@
       <tr>
         <td>Author:</td>
         <td>{{ topSys.author }}</td>
+      </tr>
+      <tr>
+        <td>Address Width:</td>
+        <td>{{ topSys.addressWidth }}</td>
+      </tr>
+      <tr>
+        <td>Data Width:</td>
+        <td>{{ topSys.dataWidth }}</td>
       </tr>
       <tr>
         <td>Address Maps: </td>
