--- a/src/app/top-sys-view/top-sys-view.component.html
+++ b/src/app/top-sys-view/top-sys-view.component.html
@@ -18,7 +18,10 @@
       </tr>
       <tr>
         <td>Author:</td>
-        <td>{{ topSys.author }}</td>
+        <td>{{ topSys.author }}
+          <app-top-sys-author>
+          </app-top-sys-author>
+        </td>
       </tr>
       <tr>
         <td>Address Width:</td>
