Add double event handling.

--- a/src/app/top-sys-author/top-sys-author.component.html
+++ b/src/app/top-sys-author/top-sys-author.component.html
@@ -1,1 +1,5 @@
-<p>top-sys-author works!</p>
+<ng-container>
+  <span (dblclick)="onAuthorDoubleClick($event)">
+    {{ author }}
+  </span>
+</ng-container>
