--- a/src/app/top-sys-view/top-sys-view.component.html
+++ b/src/app/top-sys-view/top-sys-view.component.html
@@ -19,7 +19,7 @@
       <tr>
         <td>Author:</td>
         <td>{{ topSys.author }}
-          <app-top-sys-author>
+          <app-top-sys-author [author]="topSys.author">
           </app-top-sys-author>
         </td>
       </tr>
