--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <h1>Register Printer</h1>
-<div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 75%', 'grid-template-rows': 'auto'}">
+<div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': 'auto'}">
   <button
     mat-raised-button
     (click)="onOpenClicked()"
     [ngStyle]="{'grid-area': '1 / 1 / 1 / 1'}">
     Open...
+  </button>
+  <button
+    mat-raised-button
+    (click)="onSaveClicked()"
+    [ngStyle]="{'grid-area': '1 / 2 / 1 / 2'}">
+    Save
   </button>
   <app-top-sys-tree-view
     [topSys]="topSys"
@@ -13,10 +19,10 @@
   </app-top-sys-tree-view>
   <app-top-sys-content-view
     [registerPrinterObject]="selected"
-    [ngStyle]="{'grid-area': '2 / 2 / 2 / 2'}">
+    [ngStyle]="{'grid-area': '2 / 2 / 2 / 4'}">
   </app-top-sys-content-view>
   <app-top-sys-console-view
-    [ngStyle]="{'grid-area': '3 / 1 / 3 / 3'}">
+    [ngStyle]="{'grid-area': '3 / 1 / 3 / 4'}">
   </app-top-sys-console-view>
 </div>
 <router-outlet></router-outlet>
