--- a/src/app/excel-selector/excel-selector.component.html
+++ b/src/app/excel-selector/excel-selector.component.html
@@ -1,1 +1,34 @@
-<p>excel-selector works!</p>
+<div>
+  <form class="example-form">
+    <mat-form-field class="input-width">
+      <mat-label>Config file: </mat-label>
+      <input matInput [(ngModel)]="configFile" name="configFile">
+    </mat-form-field>
+    <button
+      mat-icon-button
+      class="button-width"
+      (click)="onConfigFileClicked()">
+      <mat-icon>folder</mat-icon>
+    </button>
+    <mat-form-field class="input-width">
+      <mat-label>Excel path: </mat-label>
+      <input matInput [(ngModel)]="excelPath" name="excelPath">
+    </mat-form-field>
+    <button
+      mat-icon-button
+      class="button-width"
+      (click)="onExcelPathClicked()">
+      <mat-icon>folder</mat-icon>
+    </button>
+    <mat-form-field class="input-width">
+      <mat-label>Output path: </mat-label>
+      <input matInput [(ngModel)]="outputPath" name="outputPath">
+    </mat-form-field>
+    <button
+      mat-icon-button
+      class="button-width"
+      (click)="onOutputPathClicked()">
+      <mat-icon>folder</mat-icon>
+    </button>
+  </form>
+</div>
