--- a/src/app/excel-selector/excel-selector.component.html
+++ b/src/app/excel-selector/excel-selector.component.html
@@ -46,5 +46,5 @@
       Generate register documents.
     </mat-checkbox>
   </div>
-  <button mat-raised-button>Generate</button>
+  <button mat-raised-button (click)='onGenerateClick()'>Generate</button>
 </div>
