--- a/src/app/top-sys-console-view/top-sys-console-view.component.html
+++ b/src/app/top-sys-console-view/top-sys-console-view.component.html
@@ -1,3 +1,6 @@
-<div>
-    <h2>Console View</h2>
+<div [ngStyle]="{width: '100%'}">
+  <h2>Console View</h2>
+  <div class="logblock">
+    {{ log }}
+  </div>
 </div>
