Fixed wrong checkbox label.

--- a/src/app/excel-selector/excel-selector.component.html
+++ b/src/app/excel-selector/excel-selector.component.html
@@ -43,7 +43,7 @@
       Generate register UVM models.
     </mat-checkbox>
     <mat-checkbox [(ngModel)]="genRtl" name="genRtl" class="checkbox">
-      Generate register documents.
+      Generate register RTL modules.
     </mat-checkbox>
   </div>
   <button mat-raised-button (click)='onGenerateClick()'>Generate</button>
