--- a/src/app/excel-selector/excel-selector.component.html
+++ b/src/app/excel-selector/excel-selector.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="excel-selector">
   <form class="example-form">
     <mat-form-field class="input-width">
       <mat-label>Config file: </mat-label>
