--- a/src/app/top-sys-console-view/top-sys-console-view.component.html
+++ b/src/app/top-sys-console-view/top-sys-console-view.component.html
@@ -1,4 +1,4 @@
-<div [ngStyle]="{width: '100%'}">
+<div [ngStyle]="{width: '100%', height: '400px'}">
   <h2>Console View</h2>
   <div class="logblock">
     {{ log }}
