Put checkbox into a list.

--- a/src/app/excel-selector/excel-selector.component.html
+++ b/src/app/excel-selector/excel-selector.component.html
@@ -33,18 +33,29 @@
   </form>
 
   <div class="example-form">
-    <mat-checkbox [(ngModel)]="genDoc" name="genDoc" class="checkbox">
-      Generate register documents.
-    </mat-checkbox>
-    <mat-checkbox [(ngModel)]="genC" name="genC" class="checkbox">
-      Generate register C header files.
-    </mat-checkbox>
-    <mat-checkbox [(ngModel)]="genUvm" name="genUvm" class="checkbox">
-      Generate register UVM models.
-    </mat-checkbox>
-    <mat-checkbox [(ngModel)]="genRtl" name="genRtl" class="checkbox">
-      Generate register RTL modules.
-    </mat-checkbox>
+    <mat-list>
+      <mat-list-item>
+        <mat-checkbox [(ngModel)]="genDoc" name="genDoc" class="checkbox">
+          Generate register documents.
+        </mat-checkbox>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-checkbox [(ngModel)]="genC" name="genC" class="checkbox">
+          Generate register C header files.
+        </mat-checkbox>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-checkbox [(ngModel)]="genUvm" name="genUvm" class="checkbox">
+          Generate register UVM models.
+        </mat-checkbox>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-checkbox [(ngModel)]="genRtl" name="genRtl" class="checkbox">
+          Generate register RTL modules.
+        </mat-checkbox>
+      </mat-list-item>
+    </mat-list>
   </div>
+
   <button mat-raised-button (click)='onGenerateClick()'>Generate</button>
 </div>
