--- a/src/app/top-sys-console-view/top-sys-console-view.component.html
+++ b/src/app/top-sys-console-view/top-sys-console-view.component.html
@@ -1,6 +1,6 @@
-<div [ngStyle]="{width: '100%', height: '400px'}">
+<div [ngStyle]="{width: '100%', height: '200px'}">
   <h2>Console View</h2>
-  <div class="logblock">
+  <div #mylog class="logblock">
     {{ log }}
   </div>
 </div>
