--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Register Printer</h1>
+<div>
 <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': 'auto'}">
   <div *ngIf="!isElectronApp" [ngStyle]="{'grid-area': '1 / 1 / 1 / 5'}">
     <button
@@ -23,15 +24,16 @@
     *ngIf="!isElectronApp"
     [topSys]="topSys"
     (selected)="onSelect($event)"
-    [ngStyle]="{'grid-area': '2 / 1 / 2 / 1'}">
+    [ngStyle]="{'grid-area': '2 / 1 / 3 / 2'}">
   </app-top-sys-tree-view>
   <app-top-sys-content-view
     *ngIf="!isElectronApp"
     [registerPrinterObject]="selected"
-    [ngStyle]="{'grid-area': '2 / 2 / 2 / 4'}">
+    [ngStyle]="{'grid-area': '2 / 2 / 3 / 5'}">
   </app-top-sys-content-view>
   <app-top-sys-console-view
     [ngStyle]="{'grid-area': '3 / 1 / 4 / 5'}">
   </app-top-sys-console-view>
+</div>
 </div>
 <router-outlet></router-outlet>
