--- a/src/app/block-type-view/block-type-view.component.html
+++ b/src/app/block-type-view/block-type-view.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Block Type: {{ blockType.name }}</h2>
+  <h2>Block Type: {{ blockType.blockType }}</h2>
   <table border="1">
     <thead>
       <tr>
@@ -8,18 +8,6 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Size:</td>
-        <td>{{ blockType.size }}</td>
-      </tr>
-      <tr>
-        <td>Address Width:</td>
-        <td>{{ blockType.addressWidth }}</td>
-      </tr>
-      <tr>
-        <td>Data Width:</td>
-        <td>{{ blockType.dataWidth }}</td>
-      </tr>
       <tr>
         <td>Registers</td>
         <td>
