Parse block instances.

--- a/src/app/address-map-view/address-map-view.component.html
+++ b/src/app/address-map-view/address-map-view.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h2>Address Map: {{ addressMap.blockInstance }}</h2>
+  <h2>Address Map: {{ addressMap.name }}</h2>
   <table border="1">
     <thead>
       <tr>
