--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,19 +13,27 @@
       Save
     </button>
   </div>
-  <div *ngIf="isElectronApp" [ngStyle]="{'grid-area': '1 / 1 / 2 / 2'}">
-    <app-excel-selector>
-    </app-excel-selector>
-  </div>
-  <app-top-sys-tree-view
-    [topSys]="topSys"
-    (selected)="onSelect($event)"
-    [ngStyle]="{'grid-area': '1 / 2 / 2 / 3'}">
-  </app-top-sys-tree-view>
-  <app-top-sys-content-view
-    [registerPrinterObject]="selected"
-    [ngStyle]="{'grid-area': '1 / 3 / 2 / 5'}">
-  </app-top-sys-content-view>
+  <mat-tab-group [ngStyle]="{'grid-area': '1 / 1 / 2 / 5'}">
+    <mat-tab label="Load">
+      <div *ngIf="isElectronApp" >
+        <app-excel-selector>
+        </app-excel-selector>
+      </div>
+    </mat-tab>
+    <mat-tab label="Data">
+      <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': 'auto'}">
+        <app-top-sys-tree-view
+          [topSys]="topSys"
+          (selected)="onSelect($event)"
+          [ngStyle]="{'grid-area': '1 / 1 / 2 / 2'}">
+        </app-top-sys-tree-view>
+        <app-top-sys-content-view
+          [registerPrinterObject]="selected"
+          [ngStyle]="{'grid-area': '1 / 2 / 2 / 5'}">
+        </app-top-sys-content-view>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
   <mat-divider
     [ngStyle]="{'grid-area': '2 / 1 / 3 / 5'}">
   </mat-divider>
