--- a/src/app/address-map-view/address-map-view.component.html
+++ b/src/app/address-map-view/address-map-view.component.html
@@ -14,11 +14,11 @@
       </tr>
       <tr>
         <td>Base Address: </td>
-        <td>{{ addressMap.baseAddress }}</td>
+        <td>{{ '0x' + addressMap.baseAddress.toString(16) }}</td>
       </tr>
       <tr>
         <td>Block Size: </td>
-        <td>{{ addressMap.blockSize }}</td>
+        <td>{{ '0x' + addressMap.blockSize.toString(16) }}</td>
       </tr>
     </tbody>
   </table>
