--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,11 @@
         </div>
       </mat-tab>
       <mat-tab label="Data">
+        <button
+          mat-raised-button color="primary"
+          (click)="onExportToExcelClicked()">
+          Export to Excels...
+        </button>
         <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': 'auto'}">
           <app-top-sys-tree-view
             [topSys]="topSys"
