--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,11 @@
           (click)="onExportToExcelClicked()">
           Export to Excels...
         </button>
+        <button
+          mat-raised-button color="primary"
+          (click)="onExportToJsonClicked()">
+          Export to JSON file...
+        </button>
         <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': 'auto'}">
           <app-top-sys-tree-view
             [topSys]="topSys"
