Add version component.

--- a/src/app/top-sys-view/top-sys-view.component.html
+++ b/src/app/top-sys-view/top-sys-view.component.html
@@ -14,7 +14,10 @@
       </tr>
       <tr>
         <td>Version:</td>
-        <td>{{ topSys.version }}</td>
+        <td>
+          <app-top-sys-version [(version)]="topSys.version">
+          </app-top-sys-version>
+        </td>
       </tr>
       <tr>
         <td>Author:</td>
@@ -30,24 +33,6 @@
       <tr>
         <td>Data Width:</td>
         <td>{{ topSys.dataWidth }}</td>
-      </tr>
-      <tr>
-        <td>Address Maps: </td>
-        <td>
-          <app-address-map-view
-            *ngFor="let addressMap of topSys.blockInstances"
-            [addressMap]="addressMap">
-          </app-address-map-view>
-        </td>
-      </tr>
-      <tr>
-        <td>Block Types: </td>
-        <td>
-          <app-block-type-view
-            *ngFor="let blockType of topSys.blockTemplates"
-            [blockType]="blockType">
-          </app-block-type-view>
-        </td>
       </tr>
     </tbody>
   </table>
