--- a/src/app/top-sys-console-view/top-sys-console-view.component.html
+++ b/src/app/top-sys-console-view/top-sys-console-view.component.html
@@ -1,5 +1,5 @@
-<div [ngStyle]="{width: '100%', height: '200px'}">
-  <h2>Console View</h2>
+<div [ngStyle]="{display: 'flex', width: '100%', height: '100%'}">
+  <h2 [ngStyle]="{width: '20%'}">Console View</h2>
   <div #mylog class="logblock">
     {{ log }}
   </div>
