--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-  <div [ngStyle]="{'display': 'grid', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': 'auto'}">
+<div [ngStyle]="{'height': '100%'}">
+  <div [ngStyle]="{'display': 'grid', 'height': '100%', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': '70% 2% 28%'}">
     <div *ngIf="!isElectronApp" [ngStyle]="{'grid-area': '1 / 1 / 1 / 5'}">
       <button
         mat-raised-button
