Add block-instances-view component.

--- a/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
+++ b/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
@@ -7,6 +7,10 @@
       *ngIf="isBlock()"
       [block]="registerPrinterObject">
     </app-block-view>
+  <app-block-instances-view
+    *ngIf="isBlockInstances()"
+    [blockInstances]="registerPrinterObject">
+  </app-block-instances-view>
     <app-block-instance-view
       *ngIf="isBlockInstance()"
       [blockInstance]="registerPrinterObject">
