--- a/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
+++ b/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
@@ -1,3 +1,19 @@
 <div>
   <h2>Block Instances</h2>
+  <table mat-table [dataSource]="blockInstances" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let blockInstance">
+        {{ blockInstance.name }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="baseAddress">
+      <th mat-header-cell *matHeaderCellDef>Base Address</th>
+      <td mat-cell *matCellDef="let blockInstance">
+        {{ '0x' + blockInstance.baseAddress.toString(16) }}
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
