--- a/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
+++ b/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
@@ -8,10 +8,34 @@
         </app-edit-box>
       </td>
     </ng-container>
+    <ng-container matColumnDef="blockType">
+      <th mat-header-cell *matHeaderCellDef>Block Type</th>
+      <td mat-cell *matCellDef="let blockInstance">
+        {{ blockInstance.blockType }}
+      </td>
+    </ng-container>
     <ng-container matColumnDef="baseAddress">
       <th mat-header-cell *matHeaderCellDef>Base Address</th>
       <td mat-cell *matCellDef="let blockInstance">
         {{ '0x' + blockInstance.baseAddress.toString(16) }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="blockSize">
+      <th mat-header-cell *matHeaderCellDef>Block Size</th>
+      <td mat-cell *matCellDef="let blockInstance">
+        {{ '0x' + blockInstance.blockSize.toString(16) }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="addressWidth">
+      <th mat-header-cell *matHeaderCellDef>Address Width</th>
+      <td mat-cell *matCellDef="let blockInstance">
+        {{ blockInstance.addressWidth }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="dataWidth">
+      <th mat-header-cell *matHeaderCellDef>Data Width</th>
+      <td mat-cell *matCellDef="let blockInstance">
+        {{ blockInstance.dataWidth }}
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
