--- a/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
+++ b/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
@@ -15,10 +15,10 @@
       *ngIf="isBlockInstance()"
       [blockInstance]="registerPrinterObject">
     </app-block-instance-view>
-    <app-block-type-view
+    <app-block-template-view
       *ngIf="isBlockType()"
       [blockType]="registerPrinterObject">
-    </app-block-type-view>
+    </app-block-template-view>
     <app-register-view
       *ngIf="isRegister()"
       [register]="registerPrinterObject">
