Add table in block-template-view.f

--- a/src/app/ui-content-view/block-template-view/block-template-view.component.html
+++ b/src/app/ui-content-view/block-template-view/block-template-view.component.html
@@ -1,5 +1,15 @@
 <div>
-  <h2>Block Type: {{ blockType.blockType }}</h2>
+  <h2>Block Template: {{ blockTemplate.blockType }}</h2>
+  <table mat-table [dataSource]="blockTemplate.registers" class="mat-elevation-z8">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let register">
+        {{ register.name }}
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
   <table border="1">
     <thead>
       <tr>
@@ -12,7 +22,7 @@
         <td>Registers</td>
         <td>
           <app-register-view
-            *ngFor="let register of blockType.registers"
+            *ngFor="let register of blockTemplate.registers"
             [register]="register">
           </app-register-view>
         </td>
