--- a/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
+++ b/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
@@ -16,8 +16,8 @@
       [blockInstance]="registerPrinterObject">
     </app-block-instance-view>
     <app-block-template-view
-      *ngIf="isBlockType()"
-      [blockType]="registerPrinterObject">
+      *ngIf="isBlockTemplate()"
+      [blockTemplate]="registerPrinterObject">
     </app-block-template-view>
     <app-register-view
       *ngIf="isRegister()"
