Rename some components.

--- a/src/app/ui-tree-view/register-printer-node/register-printer-node.component.html
+++ b/src/app/ui-tree-view/register-printer-node/register-printer-node.component.html
@@ -14,8 +14,8 @@
     [blockInstanceTreeNode]="registerPrinterTreeNode"
     *ngIf="isAddressMapTreeNode()">
   </app-block-instance-node>
-  <app-block-types-node *ngIf="isBlockTypesTreeNode()">
-  </app-block-types-node>
+  <app-block-templates-node *ngIf="isBlockTypesTreeNode()">
+  </app-block-templates-node>
   <app-block-type-node
     [blockTypeTreeNode]="registerPrinterTreeNode"
     *ngIf="isBlockTypeTreeNode()">
