Toggle tree node when double click.

--- a/src/app/ui-tree-view/top-sys-tree-view/top-sys-tree-view.component.html
+++ b/src/app/ui-tree-view/top-sys-tree-view/top-sys-tree-view.component.html
@@ -17,6 +17,7 @@
       </button>
       <app-register-printer-node
         (click)="onClick(node)"
+        (dblclick)="onDblClick(node)"
         [registerPrinterTreeNode]="node">
       </app-register-printer-node>
       <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
